# libft

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  conf.mk  ft_atoi.c  ft_bzero.c  ft_digits.c  ft_dstdtor.c  ft_dstrat.c  ft_dstrbeg.c  ft_dstrend.c  ft_dstrpop.c  ft_dstrprepend.c  ft_dstrpush.c  ft_dstrpushcpy.c  ft_dstrsht.c  ft_dstrshtn.c  ft_dstrunshtcpy.c  ft_dstrunshtn.c  ft_ifsbuf.c  ft_ifsfind.c  ft_ifsgetln.c  ft_ifsread.c  ft_isascii.c  ft_islower.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memrcpy.c  (+27 more)
include/: libft.h
src/: ft_atoi.c  ft_bwero.c  ft_bzero.c  ft_digits.c  ft_dstralloc.c  ft_dstrappend.c  ft_dstrgrow.c  ft_dstrpopn.c  ft_dstrpushn.c  ft_dstrpushncpy.c  ft_dstrunsht.c  ft_dstrunshtncpy.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstiter.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memrealloc.c  ft_memset.c  ft_putchar.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+15 more)
test/: cute.h  ft_atoi.c  ft_bwero.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  (+14 more)
(+373 files in other folders)
